--- a/src/app/shared/components/sidenav/sidenav.component.html
+++ b/src/app/shared/components/sidenav/sidenav.component.html
@@ -4,6 +4,7 @@
       <a mat-list-item routerLink="/commandes">Commande en cours</a>
       <a mat-list-item routerLink="/gerer">Gerer les plats</a>
       <a mat-list-item routerLink="/benefice">Voir bénefice</a>
+      <a mat-list-item (click)="openDialog()">Panier</a>
       <a mat-list-item routerLink="/benefice">Se connecter</a>
       <a mat-list-item routerLink="/benefice">Se deconnecter</a>
     </mat-nav-list>
