--- a/src/app/shared/components/plat/plat.component.scss
+++ b/src/app/shared/components/plat/plat.component.scss
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Rubik+Mono+One&display=swap');
 .search{
   margin-top: 100px;
 }
@@ -57,7 +58,7 @@
   border: none;
   padding: 10px;
   text-align: center;
-  font-family: fantasy;
+  font-family: 'Rubik Mono One', sans-serif;
   color: #c05d00;
-  height: 35px
+  height: 35px;
 }
