--- a/src/app/pages/inscription/inscription.component.html
+++ b/src/app/pages/inscription/inscription.component.html
@@ -1,1 +1,89 @@
-<p>inscription works!</p>
+
+  <div class="content__login p-4 sm:p-8 flex flex-col justify-center bg-accent min-h-screen">
+    <div class="login w-full max-w-xl rounded-md mx-auto border p-4 sm:p-8 xl:p-20">
+      <form>
+        <h1 class="text-2xl font-bold text-center pb-5">Créer un compte</h1>
+        <div class="mb-4 mt-6">
+          <label class="block text-gray-700 text-sm font-semibold mb-2" htmlFor="email"> Nom </label>
+          <input
+            class="text-sm appearance-none rounded w-full py-2 px-3 text-gray-700 bg-gray-100 leading-tight focus:outline-none focus:shadow-outline h-10"
+            id="email"
+            type="text"
+          />
+        </div>
+        <div class="mb-4 mt-6">
+          <label class="block text-gray-700 text-sm font-semibold mb-2" htmlFor="email"> Prenom </label>
+          <input
+            class="text-sm appearance-none rounded w-full py-2 px-3 text-gray-700 bg-gray-100 leading-tight focus:outline-none focus:shadow-outline h-10"
+            id="email"
+            type="text"
+          />
+        </div>
+        <div class="mb-4 mt-6">
+          <label class="block text-gray-700 text-sm font-semibold mb-2" htmlFor="email"> Numero </label>
+          <input
+            class="text-sm appearance-none rounded w-full py-2 px-3 text-gray-700 bg-gray-100 leading-tight focus:outline-none focus:shadow-outline h-10"
+            id="email"
+            type="text"
+          />
+        </div>
+        <div class="mb-4 mt-6">
+          <label class="block text-gray-700 text-sm font-semibold mb-2" htmlFor="email"> Email </label>
+          <input
+            class="text-sm appearance-none rounded w-full py-2 px-3 text-gray-700 bg-gray-100 leading-tight focus:outline-none focus:shadow-outline h-10"
+            id="email"
+            type="email"
+          />
+        </div>
+        <div class="mb-4 mt-6">
+          <label class="block text-gray-700 text-sm font-semibold mb-2" htmlFor="email"> Type </label>
+          <select class="text-sm appearance-none rounded w-full py-2 px-3 text-gray-700 bg-gray-100 leading-tight focus:outline-none focus:shadow-outline h-10" name="" id="">
+            <option value="">Restaurant</option>
+          </select>
+        </div>
+        <div class="mb-4 mt-6">
+          <label class="block text-gray-700 text-sm font-semibold mb-2" htmlFor="email"> Adresse </label>
+          <textarea
+            class="text-sm appearance-none rounded w-full py-2 px-3 text-gray-700 bg-gray-100 leading-tight focus:outline-none focus:shadow-outline h-10"
+            id="email"
+            type="text"
+            rows="3"
+            style="min-height: 100px;"
+          ></textarea>
+
+        </div>
+        <div class="mb-4 mt-6">
+          <label class="block text-gray-700 text-sm font-semibold mb-2" htmlFor="email"> Mot de passe </label>
+          <input
+            class="text-sm appearance-none rounded w-full py-2 px-3 text-gray-700 bg-gray-100 leading-tight focus:outline-none focus:shadow-outline h-10"
+            id="password"
+            type="password"
+          />
+        </div>
+        <div class="flex items-center">
+          <input
+            id="remember_me"
+            name="remember_me"
+            type="checkbox"
+            class="h-4 w-4 text-indigo-600 focus:ring-indigo-500 border rounded"
+          />
+          <label for="remember_me" class="ml-2 block text-sm text-gray-900"> Afficher le mot de passe </label>
+        </div>
+        <div class="flex w-full mt-6">
+          <button
+            class="w-full bg-gray-800 hover:bg-grey-900 text-white text-sm py-2 px-4 font-semibold rounded focus:outline-none focus:shadow-outline h-10"
+            type="button"
+          >
+            S'inscrire
+          </button>
+        </div>
+      </form>
+      <div class="mt-3">
+        <span class="text-gray-600 text-sm"> Vous avez déjà un compte ? </span>
+        <a routerLink="/connecter" class="text-gray-700 text-sm font-semibold hover:text-accent"> S'idendifier </a>
+      </div>
+      <div class="mt-4">
+        <a [routerLink]="['/']"  class="text-gray-700 text-sm hover:text-accent inline-flex items-center"><mat-icon class="h-4 w-4 leading-4 text-lg mr-2">keyboard_backspace</mat-icon>Go to Home</a>
+      </div>
+    </div>
+  </div>
