--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -2,13 +2,13 @@
   <div class="content__login p-4 sm:p-8 flex flex-col justify-center bg-accent min-h-screen">
     <div class="login w-full max-w-xl rounded-md mx-auto border p-4 sm:p-8 xl:p-20">
       <form>
-        <h1 class="text-2xl font-bold text-center pb-5">Se connecter</h1>
+        <h1 class="text-2xl font-bold text-center pb-5">S'identifier</h1>
         <div class="mb-4 mt-6">
           <label class="block text-gray-700 text-sm font-semibold mb-2" htmlFor="email"> Email </label>
           <input
             class="text-sm appearance-none rounded w-full py-2 px-3 text-gray-700 bg-gray-100 leading-tight focus:outline-none focus:shadow-outline h-10"
             id="email"
-            type="text"
+            type="email"
             placeholder="Entrer votre adresse email"
           />
         </div>
@@ -35,13 +35,13 @@
             class="w-full bg-gray-800 hover:bg-grey-900 text-white text-sm py-2 px-4 font-semibold rounded focus:outline-none focus:shadow-outline h-10"
             type="button"
           >
-            Sign in
+            Se connecter
           </button>
         </div>
       </form>
       <div class="mt-3">
         <span class="text-gray-600 text-sm"> Vous n'avez pas de compte ? </span>
-        <a routerLink="/auth/signup" class="text-gray-700 text-sm font-semibold hover:text-accent"> S'inscrire </a>
+        <a routerLink="/inscrire" class="text-gray-700 text-sm font-semibold hover:text-accent"> S'inscrire </a>
       </div>
       <div class="mt-4">
         <a [routerLink]="['/']"  class="text-gray-700 text-sm hover:text-accent inline-flex items-center"><mat-icon class="h-4 w-4 leading-4 text-lg mr-2">keyboard_backspace</mat-icon>Go to Home</a>
