Affichage - Design commande en cours, contact

--- a/src/app/pages/inscription/inscription.component.html
+++ b/src/app/pages/inscription/inscription.component.html
@@ -1,5 +1,4 @@
-
-  <div class="content__login p-4 sm:p-8 flex flex-col justify-center bg-accent min-h-screen">
+  <div class="content__login p-4 sm:p-8 flex flex-col justify-center min-h-screen">
     <div class="login w-full max-w-xl rounded-md mx-auto border p-4 sm:p-8 xl:p-20">
       <form>
         <h1 class="text-2xl font-bold text-center pb-5">Créer un compte</h1>
@@ -83,7 +82,7 @@
         <a routerLink="/connecter" class="text-gray-700 text-sm font-semibold hover:text-accent"> S'idendifier </a>
       </div>
       <div class="mt-4">
-        <a [routerLink]="['/']"  class="text-gray-700 text-sm hover:text-accent inline-flex items-center"><mat-icon class="h-4 w-4 leading-4 text-lg mr-2">keyboard_backspace</mat-icon>Go to Home</a>
+        <a [routerLink]="['/']"  class="text-gray-700 text-sm hover:text-accent inline-flex items-center"><mat-icon class="h-4 w-4 leading-4 text-lg mr-2">keyboard_backspace</mat-icon>Retour au page d'accueil</a>
       </div>
     </div>
   </div>
