--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -7,10 +7,11 @@
         </a>
         <ul class="flex item-center ml-5" *ngIf="!isLessThenLargeDevice">
           <li>
-            <a mat-button routerLink="/" routerLinkActive="bg-gray-100" class="text-lg font-bold py-2 px-5">Plats</a>
-            <a mat-button routerLink="/commandes" routerLinkActive="bg-gray-100" class="text-lg font-bold py-2 px-5">Commande en cours</a>
-            <a mat-button routerLink="/gerer" routerLinkActive="bg-gray-100" class="text-lg font-bold py-2 px-5">Gerer les plats</a>
+            <a mat-button routerLink="/accueil" routerLinkActive="bg-gray-100" class="text-lg font-bold py-2 px-5">Plats</a>
+            <a mat-button routerLink="/commande" routerLinkActive="bg-gray-100" class="text-lg font-bold py-2 px-5">Commande en cours</a>
+            <a mat-button routerLink="/gerer" routerLinkActive="bg-gray-100" class="text-lg font-bold py-2 px-5">Gérer les plats</a>
             <a mat-button routerLink="/benefice" routerLinkActive="bg-gray-100" class="text-lg font-bold py-2 px-5">Voir bénefice</a>
+            <a mat-button routerLink="/contact" routerLinkActive="bg-gray-100" class="text-lg font-bold py-2 px-5">Contactez e-kali</a>
           </li>
         </ul>
       </div>
