--- a/src/app/shared/components/commandes/commandes.component.html
+++ b/src/app/shared/components/commandes/commandes.component.html
@@ -1,1 +1,83 @@
-<p>commandes works!</p>
+<div class="commande">
+  <div class="search pb-6">
+    <div class="border overflow-hidden sm:rounded-md p-5">
+      <div class="mb-3">
+        <div class="flex justify-between flex-wrap">
+          <h4>Recherche :</h4>
+        </div>
+        <div class="mt-3 flex">
+          <input
+            type="text"
+            placeholder="Tapez ici ce que vous voullez rechercher..."
+            class="flex-1 w-full sm:text-sm lg:text-xl border-gray-300 rounded-l-md rounded-r-md py-3 px-6"
+            required
+          />
+        </div>
+        <div class="mt-3 flex">
+          <button (click)="advanceSearchExpanded = !advanceSearchExpanded" mat-button><mat-icon>tune</mat-icon></button>
+        </div>
+      </div>
+      <mat-expansion-panel [expanded]="advanceSearchExpanded">
+        <div class="grid grid-cols-6 gap-6 mt-4">
+          <div class="col-span-6 sm:col-span-3">
+            <div class="flex justify-between flex-wrap">
+              <p>Prix minimum :</p>
+            </div>
+            <input
+              type="text"
+              class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md"
+              placeholder="0.0"
+            />
+          </div>
+          <div class="col-span-6 sm:col-span-3">
+            <div class="flex justify-between flex-wrap">
+              <p>Prix maximum :</p>
+            </div>
+            <input
+              type="text"
+              class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md"
+              placeholder="0.0"
+            />
+          </div>
+        </div>
+      </mat-expansion-panel>
+    </div>
+</div>
+
+  <div class="table-inside">
+    <div class="flex flex-col border ltLg:responsive">
+      <div class="flex items-center p-4 border-b">
+        <div class="w-6/12 font-medium text-left">Plat</div>
+        <div class="w-2/12 font-medium text-left">Restaurant</div>
+        <div class="w-2/12 font-medium text-left">Prix en Ar</div>
+        <div class="w-2/12 font-medium text-left">Quantite</div>
+        <div class="w-1/12 font-medium text-left"></div>
+      </div>
+      <div class="flex items-center p-4 border-b" *ngFor="let a of [1,2]">
+        <div class="w-6/12">
+          <a href="" class="flex hover:text-primary">
+            <div class="max-h-16 w-16 flex-none mr-3 border">
+              <img src="../../../assets/images/accueil.jpg" alt="img">
+            </div>
+            <h6 class="flex-auto">Tsara Tsiro</h6>
+          </a>
+        </div>
+        <div class="w-2/12 text-left">Tsiro</div>
+        <div class="w-2/12 text-left">10000</div>
+        <div class="w-2/12 text-left">
+          20
+        </div>
+        <div class="w-1/12 text-left">
+          <button class="action_icon__btn" mat-icon-button>
+            <mat-icon>delete</mat-icon>
+          </button>
+        </div>
+      </div>
+      <div class="flex items-center p-4 border-b">
+        <div class="w-12/12 text-left">
+          <b>Nombre : <span bg-warn>100</span></b>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
