--- a/src/app/shared/components/plat/plat.component.html
+++ b/src/app/shared/components/plat/plat.component.html
@@ -46,7 +46,7 @@
     </div>
 
     <div class="ll-section-head text-center mb-5">
-      <h1 class="ll-section-head__heaidng">PLAT DU JOUR</h1>
+      <h1 class="ll-section-head__heaidng">RECETTES</h1>
     </div>
     <div class="grid grid-cols-12 gap-6 xxl:gap-8">
       <div *ngFor="let a of [1,1,1,1,1,1,1]" class="col-span-12 md:col-span-6 xl:col-span-4">
