--- a/src/app/pages/accueil/accueil.component.html
+++ b/src/app/pages/accueil/accueil.component.html
@@ -6,7 +6,7 @@
     </mat-sidenav>
     <mat-sidenav-content>
       <app-header (toggleSidenav)="toggleSidenav()"></app-header>
-      <div class="container">
+      <div class="container" style="min-height: 455px;">
         <app-plat></app-plat>
       </div>
       <app-footer></app-footer>
