--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -5,7 +5,7 @@
     </mat-sidenav>
     <mat-sidenav-content>
       <app-header (toggleSidenav)="toggleSidenav()"></app-header>
-      <div class="container">
+      <div class="container" style="min-height: 455px;">
         <app-sendmail></app-sendmail>
       </div>
       <app-footer></app-footer>
