Affichage - Integration api login et inscription

--- a/src/app/pages/commande/commande.component.html
+++ b/src/app/pages/commande/commande.component.html
@@ -1,4 +1,4 @@
-<ll-loader [show]="isLoader"></ll-loader>
+<!-- <ll-loader [show]="isLoader"></ll-loader> -->
 <div [class.example-is-mobile]="isLessThenLargeDevice">
   <mat-sidenav-container class="kl-sidenav-container">
     <mat-sidenav #sidenav [opened]="isSidenavExpand && isLessThenLargeDevice" [mode]="'over'" [fixedInViewport]="isLessThenLargeDevice">
@@ -7,6 +7,7 @@
     <mat-sidenav-content>
       <app-header (toggleSidenav)="toggleSidenav()"></app-header>
       <div class="container" style="min-height: 455px;">
+        <app-loader [show]="isLoader"></app-loader>
         <app-commandes></app-commandes>
       </div>
       <app-footer></app-footer>
