--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,15 +1,16 @@
 
   <div class="content__login p-4 sm:p-8 flex flex-col justify-center min-h-screen">
     <div class="login w-full max-w-xl rounded-md mx-auto border p-4 sm:p-8 xl:p-20">
-      <form>
+      <form [formGroup]="loginForm" (ngSubmit)="login()" >
         <h1 class="text-2xl font-bold text-center pb-5">S'identifier</h1>
         <div class="mb-4 mt-6">
-          <label class="block text-gray-700 text-sm font-semibold mb-2" htmlFor="email"> Email </label>
+          <label class="block text-gray-700 text-sm font-semibold mb-2" htmlFor="email"> Email ou numero </label>
           <input
             class="text-sm appearance-none rounded w-full py-2 px-3 text-gray-700 bg-gray-100 leading-tight focus:outline-none focus:shadow-outline h-10"
             id="email"
-            type="email"
+            type="text"
             placeholder="Entrer votre adresse email"
+            formControlName="login"
           />
         </div>
         <div class="mb-6 mt-6">
@@ -17,8 +18,9 @@
           <input
             class="text-sm bg-gray-100 appearance-none rounded w-full py-2 px-3 text-gray-700 mb-1 leading-tight focus:outline-none focus:shadow-outline h-10"
             id="password"
-            type="password"
+            [type]="affiche"
             placeholder="Entrer votre mot de passe"
+            formControlName="password"
           />
         </div>
         <div class="flex items-center">
@@ -26,6 +28,8 @@
             id="remember_me"
             name="remember_me"
             type="checkbox"
+            formControlName="check"
+            (click)="showhide()"
             class="h-4 w-4 text-indigo-600 focus:ring-indigo-500 border rounded"
           />
           <label for="remember_me" class="ml-2 block text-sm text-gray-900"> Afficher le mot de passe </label>
@@ -33,7 +37,7 @@
         <div class="flex w-full mt-6">
           <button
             class="w-full bg-gray-800 hover:bg-grey-900 text-white text-sm py-2 px-4 font-semibold rounded focus:outline-none focus:shadow-outline h-10"
-            type="button"
+            type="submit"
           >
             Se connecter
           </button>
