--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -8,14 +8,13 @@
         <ul class="flex item-center ml-5" *ngIf="!isLessThenLargeDevice">
           <li>
             <a mat-button routerLink="/accueil" routerLinkActive="bg-gray-100" class="text-lg font-bold py-2 px-5">Plats</a>
-            <a mat-button routerLink="/commande" routerLinkActive="bg-gray-100" class="text-lg font-bold py-2 px-5">Commande en cours</a>
-            <a mat-button routerLink="/gerer" routerLinkActive="bg-gray-100" class="text-lg font-bold py-2 px-5">Gérer les plats</a>
-            <a mat-button routerLink="/benefice" routerLinkActive="bg-gray-100" class="text-lg font-bold py-2 px-5">Voir bénefice</a>
+            <a mat-button *ngIf="userType==='Restaurant'" routerLink="/commande" routerLinkActive="bg-gray-100" class="text-lg font-bold py-2 px-5">Commande en cours</a>
+            <a mat-button *ngIf="userType==='Restaurant'" routerLink="/gerer" routerLinkActive="bg-gray-100" class="text-lg font-bold py-2 px-5">Gérer les plats</a>
+            <a mat-button *ngIf="userType==='Restaurant'" routerLink="/benefice" routerLinkActive="bg-gray-100" class="text-lg font-bold py-2 px-5">Voir bénefice</a>
             <a mat-button routerLink="/contact" routerLinkActive="bg-gray-100" class="text-lg font-bold py-2 px-5">Contactez e-kali</a>
           </li>
         </ul>
       </div>
-      <!-- <mat-icon (click)="openDialog()" *ngIf="isLessThenLargeDevice" matBadge="15" matBadgeColor="warn" style="cursor: pointer;">shopping_cart</mat-icon> -->
       <button
         *ngIf="isLessThenLargeDevice"
         (click)="toggleSidenav.emit()"
@@ -26,7 +25,8 @@
       </button>
       <div *ngIf="!isLessThenLargeDevice" class="items-center md:flex ml-auto">
         <mat-icon (click)="openDialog()" matBadge="15" matBadgeColor="warn" style="cursor: pointer;">shopping_cart</mat-icon>
-        <a [routerLink]="['/connecter']" class="text-lg font-bold py-2 px-5">Se connecter</a>
+        <a *ngIf="!isLogged" [routerLink]="['/connecter']" class="text-lg font-bold py-2 px-5" style="cursor: pointer;">Se connecter</a>
+        <a *ngIf="isLogged" mat-list-item (click)="deconnecter()" class="text-lg font-bold py-2 px-5" style="cursor: pointer;">Se deconnecter</a>
       </div>
     </div>
   </div>
