--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -4,6 +4,8 @@
             <div class="py-10">
                 <nav class="items-center text-center" >
                     <p class="text-white">RANDRIATSARAFARA Tovomampionona Fitahiana</p>
+                    <hr style="margin-top: 20px;margin-bottom: 20px;">
+                    <p class="text-white">MASTER 1 PROMOTION 9</p>
                 </nav>
             </div>
         </div>
