--- a/src/app/shared/components/plat/plat.component.html
+++ b/src/app/shared/components/plat/plat.component.html
@@ -1,45 +1,52 @@
   <div class="search pb-6">
     <div class="border overflow-hidden sm:rounded-md p-5">
-      <div class="mb-3">
-        <div class="flex justify-between flex-wrap">
-          <h4>Recherche :</h4>
-        </div>
-        <div class="mt-3 flex">
-          <input
-            type="text"
-            placeholder="Tapez ici ce que vous voullez rechercher..."
-            class="flex-1 w-full sm:text-sm lg:text-xl border-gray-300 rounded-l-md rounded-r-md py-3 px-6"
-            required
-          />
-        </div>
-        <div class="mt-3 flex">
-          <button (click)="advanceSearchExpanded = !advanceSearchExpanded" mat-button><mat-icon>tune</mat-icon></button>
-        </div>
-      </div>
-      <mat-expansion-panel [expanded]="advanceSearchExpanded">
-        <div class="grid grid-cols-6 gap-6 mt-4">
-          <div class="col-span-6 sm:col-span-3">
-            <div class="flex justify-between flex-wrap">
-              <p>Prix minimum :</p>
-            </div>
+      <form [formGroup]="loginForm">
+        <div class="mb-3">
+          <div class="flex justify-between flex-wrap">
+            <h4>Recherche :</h4>
+          </div>
+          <div class="mt-3 flex">
             <input
               type="text"
-              class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md"
-              placeholder="0.0"
+              placeholder="Tapez ici ce que vous voullez rechercher..."
+              class="flex-1 w-full sm:text-sm lg:text-xl border-gray-300 rounded-l-md rounded-r-md py-3 px-6"
+              (input)="onLike()"
+              formControlName="like"
             />
           </div>
-          <div class="col-span-6 sm:col-span-3">
-            <div class="flex justify-between flex-wrap">
-              <p>Prix maximum :</p>
-            </div>
-            <input
-              type="text"
-              class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md"
-              placeholder="0.0"
-            />
+          <div class="mt-3 flex">
+            <button (click)="advanceSearchExpanded = !advanceSearchExpanded" mat-button><mat-icon>tune</mat-icon></button>
           </div>
         </div>
-      </mat-expansion-panel>
+        <mat-expansion-panel [expanded]="advanceSearchExpanded">
+          <div class="grid grid-cols-6 gap-6 mt-4">
+            <div class="col-span-6 sm:col-span-3">
+              <div class="flex justify-between flex-wrap">
+                <p>Prix minimum :</p>
+              </div>
+              <input
+                type="text"
+                class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md"
+                placeholder="0.0"
+                (input)="onLike()"
+                formControlName="min"
+              />
+            </div>
+            <div class="col-span-6 sm:col-span-3">
+              <div class="flex justify-between flex-wrap">
+                <p>Prix maximum :</p>
+              </div>
+              <input
+                type="text"
+                class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md"
+                placeholder="0.0"
+                (input)="onLike()"
+                formControlName="max"
+              />
+            </div>
+          </div>
+        </mat-expansion-panel>
+      </form>
     </div>
   </div>
 
@@ -50,14 +57,14 @@
 
 
   <div class="grid grid-cols-12 gap-6 xxl:gap-8">
-  <div *ngFor="let a of [1,1,1,1,1,1,1]" class="col-span-12 md:col-span-6 xl:col-span-4">
+  <div *ngFor="let product of products" class="col-span-12 md:col-span-6 xl:col-span-4">
   <mat-card class="product">
     <img mat-card-image src="../../../assets/images/accueil.jpg" alt="" style="width: 100%; margin: 0 0 20px" />
     <mat-card-content class="flex">
       <div class="flex-grow pl-3">
         <h4 class="product__creator"><mat-icon aria-hidden="false" aria-label="Example home icon">home</mat-icon><b> Tsiro</b> à Tana - Andoharanofotsy </h4>
         <h2 class="product__name">
-          <a [routerLink]="['/products', 1]">Tsara Tsiro <span class="product__price text-accent font-bold"> 10000Ar </span></a>
+          <a [routerLink]="['/products', 1]">{{product.designation}} <span class="product__price text-accent font-bold"> {{product.prixVente}}Ar </span></a>
         </h2>
       </div>
     </mat-card-content>
