--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -24,7 +24,7 @@
         <mat-icon>menu</mat-icon>
       </button>
       <div *ngIf="!isLessThenLargeDevice" class="items-center md:flex ml-auto">
-        <mat-icon (click)="openDialog()" matBadge="15" matBadgeColor="warn" style="cursor: pointer;">shopping_cart</mat-icon>
+        <mat-icon (click)="openDialog()" [matBadge]="countPanier" matBadgeColor="warn" style="cursor: pointer;">shopping_cart</mat-icon>
         <a *ngIf="!isLogged" [routerLink]="['/connecter']" class="text-lg font-bold py-2 px-5" style="cursor: pointer;">Se connecter</a>
         <a *ngIf="isLogged" mat-list-item (click)="deconnecter()" class="text-lg font-bold py-2 px-5" style="cursor: pointer;">Se deconnecter</a>
       </div>
