--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -3,9 +3,9 @@
         <div class="container">
             <div class="py-10">
                 <nav class="items-center text-center" >
-                    <p class="text-white">RANDRIATSARAFARA Tovomampionona Fitahiana</p>
+                    <a href="https://www.facebook.com/randriatsarafara.tovomampiononafitahiana" class="text-white">RANDRIATSARAFARA Tovomampionona Fitahiana</a>
                     <hr style="margin-top: 20px;margin-bottom: 20px;">
-                    <p class="text-white">MASTER 1 PROMOTION 9</p>
+                    <p class="text-white">MASTER 1 - PROMOTION 9</p>
                 </nav>
             </div>
         </div>
