--- a/src/app/shared/components/commandes/commandes.component.html
+++ b/src/app/shared/components/commandes/commandes.component.html
@@ -47,35 +47,34 @@
   <div class="table-inside">
     <div class="flex flex-col border ltLg:responsive">
       <div class="flex items-center p-4 border-b">
-        <div class="w-6/12 font-medium text-left">Plat</div>
-        <div class="w-2/12 font-medium text-left">Restaurant</div>
-        <div class="w-2/12 font-medium text-left">Prix en Ar</div>
-        <div class="w-2/12 font-medium text-left">Quantite</div>
-        <div class="w-1/12 font-medium text-left"></div>
+        <div class="w-6/12 font-medium text-left">ID COMMANDE</div>
+        <div class="w-2/12 font-medium text-left">Client</div>
+        <div class="w-2/12 font-medium text-left">Prix Total</div>
+        <div class="w-2/12 font-medium text-left">Quantite Total</div>
+        <div class="w-1/12 font-medium text-left">Status</div>
       </div>
-      <div class="flex items-center p-4 border-b" *ngFor="let a of [1,2]">
-        <div class="w-6/12">
-          <a href="" class="flex hover:text-primary">
-            <div class="max-h-16 w-16 flex-none mr-3 border">
-              <img src="../../../assets/images/accueil.jpg" alt="img">
-            </div>
-            <h6 class="flex-auto">Tsara Tsiro</h6>
-          </a>
+      <div class="flex items-center p-4 border-b" *ngFor="let com of commande">
+        <div class="w-6/12 toutplat">
+          <p>{{com._id}}</p>
         </div>
-        <div class="w-2/12 text-left">Tsiro</div>
-        <div class="w-2/12 text-left">10000</div>
         <div class="w-2/12 text-left">
-          20
+          <p>{{com.userlib.nom}}</p>
+          <p>{{com.userlib.adresse}}</p>
+          <p>{{com.userlib.numero}}</p>
+        </div>
+        <div class="w-2/12 text-left">{{com.montant}} Ariary</div>
+        <div class="w-2/12 text-left">
+          {{com.quantite}} Unité
         </div>
         <div class="w-1/12 text-left">
-          <button class="action_icon__btn" mat-icon-button>
-            <mat-icon>delete</mat-icon>
+          <button class="action_icon__btn" style="color: rgb(4, 20, 240);;" mat-icon-button>
+            <mat-icon>info</mat-icon>
           </button>
         </div>
       </div>
       <div class="flex items-center p-4 border-b">
         <div class="w-12/12 text-left">
-          <b>Nombre : <span bg-warn>100</span></b>
+          <b>Nombre Total : <span bg-warn>{{count}}</span></b>
         </div>
       </div>
     </div>
