--- a/src/app/shared/components/commandes/commandes.component.scss
+++ b/src/app/shared/components/commandes/commandes.component.scss
@@ -27,3 +27,9 @@ $iconSize: 22px;
 .commande{
   margin-top: 100px;
 }
+
+.toutplat p{
+  line-height: 12px;
+  font-size: 10px;
+  color: rgb(95, 102, 100);
+}
