--- a/src/app/shared/components/plat/plat.component.html
+++ b/src/app/shared/components/plat/plat.component.html
@@ -76,7 +76,8 @@
               <input id="id_{{product._id}}" value="1" [placeholder]="y" type="number" class="text-accent p-2 px-4 w-full sm:w-1/2 rounded-sm" />
             </div>
             <div class="flex-1 text-center">
-              <a (click)="addPanier('id_'+product._id,product._id)" mat-raised-button color="warn" class="px-4">Ajouter panier</a>
+              <a (click)="addPanier('id_'+product._id,product._id);addHuhu()" mat-raised-button color="warn" class="px-4">Ajouter panier</a>
+              <!-- <a (click)="addPanier('id_'+product._id,product._id)" mat-raised-button color="warn" class="px-4">Ajouter panier</a> -->
             </div>
           </mat-card-actions>
     <!-- </form> -->
