--- a/src/app/pages/plats-livreur/plats-livreur.component.html
+++ b/src/app/pages/plats-livreur/plats-livreur.component.html
@@ -6,7 +6,7 @@
     <mat-sidenav-content>
       <app-header (toggleSidenav)="toggleSidenav()"></app-header>
       <div class="container" style="min-height: 455px;">
-          <app-listesusers></app-listesusers>
+        <app-plat-livreur></app-plat-livreur>
       </div>
       <app-footer></app-footer>
     </mat-sidenav-content>
