--- a/src/app/pages/accueil/accueil.component.html
+++ b/src/app/pages/accueil/accueil.component.html
@@ -5,9 +5,9 @@
       <app-sidenav></app-sidenav>
     </mat-sidenav>
     <mat-sidenav-content>
-      <app-header (toggleSidenav)="toggleSidenav()" #hh></app-header>
+      <app-header (toggleSidenav)="toggleSidenav()" #fc></app-header>
       <div class="container" style="min-height: 455px;">
-        <app-plat [addHuhu]="hh.addHuhu"></app-plat>
+        <app-plat [addHuhu]="fc.addHuhu"></app-plat>
       </div>
       <app-footer></app-footer>
     </mat-sidenav-content>
