--- a/src/app/shared/components/commanderesp/commanderesp.component.html
+++ b/src/app/shared/components/commanderesp/commanderesp.component.html
@@ -1,5 +1,5 @@
 <div class="commande">
-  <div class="search pb-6">
+  <!-- <div class="search pb-6">
     <div class="border overflow-hidden sm:rounded-md p-5">
       <div class="mb-3">
         <div class="flex justify-between flex-wrap">
@@ -42,22 +42,22 @@
         </div>
       </mat-expansion-panel>
     </div>
-</div>
+</div> -->
 
   <div class="table-inside">
     <div class="flex flex-col border ltLg:responsive">
       <div class="flex items-center p-4 border-b">
-        <div class="w-6/12 font-medium text-left">ID COMMANDE</div>
-        <div class="w-2/12 font-medium text-left">Client</div>
+        <div class="w-4/12 font-medium text-left">ID COMMANDE</div>
+        <div class="w-4/12 font-medium text-left">Client</div>
         <div class="w-2/12 font-medium text-left">Prix Total</div>
         <div class="w-2/12 font-medium text-left">Quantite Total</div>
-        <div class="w-1/12 font-medium text-left">Status</div>
+        <div class="w-1/12 font-medium text-center">Status</div>
       </div>
       <div class="flex items-center p-4 border-b" *ngFor="let com of commande">
-        <div class="w-6/12 toutplat">
+        <div class="w-4/12 toutplat">
           <p>{{com._id}}</p>
         </div>
-        <div class="w-2/12 text-left">
+        <div class="w-4/12 text-left">
           <p>{{com.userlib.nom}}</p>
           <p>{{com.userlib.adresse}}</p>
           <p>{{com.userlib.numero}}</p>
