--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -14,6 +14,7 @@
             <a mat-button *ngIf="userType==='Responsable'" routerLink="/admin/newuser" routerLinkActive="bg-gray-100" class="text-lg font-bold py-2 px-5">Paramètre</a>
             <a mat-button *ngIf="userType==='Restaurant'" routerLink="/resto/benefice" routerLinkActive="bg-gray-100" class="text-lg font-bold py-2 px-5">Voir bénefice</a>
             <a mat-button *ngIf="userType==='Responsable'" routerLink="/admin/benefice" routerLinkActive="bg-gray-100" class="text-lg font-bold py-2 px-5">Voir bénefice</a>
+            <a mat-button *ngIf="userType==='Livreur'" routerLink="/livreur/livraison" routerLinkActive="bg-gray-100" class="text-lg font-bold py-2 px-5">Livraison</a>
             <a mat-button routerLink="/contact" routerLinkActive="bg-gray-100" class="text-lg font-bold py-2 px-5">Contactez e-kali</a>
           </li>
         </ul>
@@ -27,7 +28,7 @@
         <mat-icon>menu</mat-icon>
       </button>
       <div *ngIf="!isLessThenLargeDevice" class="items-center md:flex ml-auto menu-left">
-        <mat-icon (click)="openDialog()" [matBadge]="addHuhu ()" matBadgeColor="warn" style="cursor: pointer;margin-right: 10px;">shopping_cart</mat-icon>
+        <mat-icon (click)="openDialog()" [matBadge]="addHuhu()" matBadgeColor="warn" style="cursor: pointer;margin-right: 10px;">shopping_cart</mat-icon>
         <a *ngIf="!isLogged" [routerLink]="['/connecter']" class="text-lg font-bold py-2 px-5" style="cursor: pointer;">Se connecter</a>
         <a *ngIf="!isLogged" [routerLink]="['/inscrire']" class="text-lg font-bold py-2 px-5" style="cursor: pointer;">S'inscrire</a>
         <a *ngIf="isLogged" mat-list-item (click)="deconnecter()" class="text-lg font-bold py-2 px-5" style="cursor: pointer;">Se deconnecter</a>
