--- a/src/app/shared/components/listesusers/listesusers.component.html
+++ b/src/app/shared/components/listesusers/listesusers.component.html
@@ -1,1 +1,90 @@
-<p>listesusers works!</p>
+<div class="commande">
+  <!-- <div class="search pb-6">
+    <div class="border overflow-hidden sm:rounded-md p-5">
+      <div class="mb-3">
+        <div class="flex justify-between flex-wrap">
+          <h4>Recherche :</h4>
+        </div>
+        <div class="mt-3 flex">
+          <input
+            type="text"
+            placeholder="Tapez ici ce que vous voullez rechercher..."
+            class="flex-1 w-full sm:text-sm lg:text-xl border-gray-300 rounded-l-md rounded-r-md py-3 px-6"
+            required
+          />
+        </div>
+        <div class="mt-3 flex">
+          <button (click)="advanceSearchExpanded = !advanceSearchExpanded" mat-button><mat-icon>tune</mat-icon></button>
+        </div>
+      </div>
+      <mat-expansion-panel [expanded]="advanceSearchExpanded">
+        <div class="grid grid-cols-6 gap-6 mt-4">
+          <div class="col-span-6 sm:col-span-3">
+            <div class="flex justify-between flex-wrap">
+              <p>Prix minimum :</p>
+            </div>
+            <input
+              type="text"
+              class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md"
+              placeholder="0.0"
+            />
+          </div>
+          <div class="col-span-6 sm:col-span-3">
+            <div class="flex justify-between flex-wrap">
+              <p>Prix maximum :</p>
+            </div>
+            <input
+              type="text"
+              class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md"
+              placeholder="0.0"
+            />
+          </div>
+        </div>
+      </mat-expansion-panel>
+    </div>
+</div> -->
+
+  <div class="table-inside">
+    <div class="flex flex-col border ltLg:responsive">
+      <div class="flex items-center p-4 border-b">
+        <div class="w-3/12 font-medium text-left">Nom & Prenom</div>
+        <div class="w-3/12 font-medium text-left">Information</div>
+        <div class="w-4/12 font-medium text-left">Contact</div>
+        <div class="w-1/12 font-medium text-left">Role</div>
+        <div class="w-1/12 font-medium text-center">Status</div>
+        <div class="w-1/12 font-medium text-center">Action</div>
+      </div>
+      <div class="flex items-center p-4 border-b" *ngFor="let user of users">
+        <div class="w-3/12 toutplat">
+          <p>{{user.nom}}</p>
+          <p>{{user.prenom}}</p>
+        </div>
+        <div class="w-3/12 text-left">
+          <p>{{user.adresse}}</p>
+          <p>{{user.villelib[0].val}}</p>
+        </div>
+        <div class="w-4/12 text-left">
+          <p>{{user.email}}</p>
+          <p>{{user.numero}}</p>
+        </div>
+        <div class="w-1/12 text-left">
+           {{user.rolelib[0].val}}
+        </div>
+        <div class="w-1/12 text-center">
+          <button mat-icon-button>
+            <mat-icon *ngIf="user.status=='NON ACTIVER'" style="color: green;">check_circle</mat-icon>
+            <mat-icon *ngIf="user.status=='SUPPRIMER'" style="color: rgb(255, 4, 4);">highlight_off</mat-icon>
+          </button>
+        </div>
+        <div class="w-1/12 text-center">
+          <button (click)="desactiver(user._id)" *ngIf="user.status=='NON ACTIVER'" mat-icon-button>
+            <mat-icon style="color: rgb(255, 4, 4);">highlight_off</mat-icon>
+          </button>
+          <button (click)="activer(user._id)" *ngIf="user.status=='SUPPRIMER'" mat-icon-button>
+            <mat-icon style="color: green;">check_circle</mat-icon>
+          </button>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
