--- a/src/app/shared/components/plat-livreur/plat-livreur.component.html
+++ b/src/app/shared/components/plat-livreur/plat-livreur.component.html
@@ -1,5 +1,5 @@
 <div class="commande">
-  <div class="search pb-6">
+  <!-- <div class="search pb-6">
     <div class="border overflow-hidden sm:rounded-md p-5">
       <div class="mb-3">
         <div class="flex justify-between flex-wrap">
@@ -42,22 +42,30 @@
         </div>
       </mat-expansion-panel>
     </div>
-</div>
+</div> -->
 
   <div class="table-inside">
     <div class="flex flex-col border ltLg:responsive">
       <div class="flex items-center p-4 border-b">
-        <div class="w-6/12 font-medium text-left">ID COMMANDE</div>
-        <div class="w-2/12 font-medium text-left">Client</div>
+        <div class="w-12/12 text-left">
+          <b>Nombre Total : <span bg-warn>{{count}}</span></b>
+        </div>
+      </div>
+      <div class="flex items-center p-4 border-b">
+        <div class="w-4/12 font-medium text-left">LISTE DES PLATS</div>
+        <div class="w-4/12 font-medium text-left">Client</div>
         <div class="w-2/12 font-medium text-left">Prix Total</div>
         <div class="w-2/12 font-medium text-left">Quantite Total</div>
-        <div class="w-1/12 font-medium text-center">Status</div>
+        <div class="w-2/12 font-medium text-center">Status</div>
+        <div class="w-1/12 font-medium text-center">Livreur</div>
       </div>
-      <div class="flex items-center p-4 border-b" *ngFor="let com of commande">
-        <div class="w-6/12 toutplat">
-          <p>{{com._id}}</p>
+      <div class="flex items-center p-4 border-b" *ngFor="let com of commande;let i = index">
+        <div class="w-4/12 toutplat">
+          <span *ngFor="let det of com.detail">
+            <p style="font-size: 12px;"><b>{{det.idplatlib.designation}} :</b> {{det.quantite}}</p>
+          </span>
         </div>
-        <div class="w-2/12 text-left">
+        <div class="w-4/12 text-left">
           <p>{{com.userlib.nom}}</p>
           <p>{{com.userlib.adresse}}</p>
           <p>{{com.userlib.numero}}</p>
@@ -66,15 +74,15 @@
         <div class="w-2/12 text-left">
           {{com.quantite}} Unité
         </div>
-        <div class="w-1/12 text-center">
-          <button class="action_icon__btn" style="color: rgb(4, 20, 240);;" mat-icon-button>
-            <mat-icon>info</mat-icon>
-          </button>
+        <div class="w-2/12 text-center">
+          <select [(ngModel)]="status[i]" (change)="livraison(com._id,i)">
+            <option *ngIf="(status[i]==='EN ATTENTE')" value="EN ATTENTE">EN ATTENTE</option>
+            <option *ngIf="(status[i]==='EN ATTENTE') || (status[i]==='EN COURS')" value="EN COURS">EN COURS</option>
+            <option value="LIVRER">LIVRER</option>
+          </select>
         </div>
-      </div>
-      <div class="flex items-center p-4 border-b">
-        <div class="w-12/12 text-left">
-          <b>Nombre Total : <span bg-warn>{{count}}</span></b>
+        <div *ngIf="com.livreurlib.nom" class="w-1/12 text-center">
+            {{com.livreurlib.nom}}
         </div>
       </div>
     </div>
