--- a/src/app/shared/components/commandes/commandes.component.html
+++ b/src/app/shared/components/commandes/commandes.component.html
@@ -1,5 +1,5 @@
 <div class="commande">
-  <div class="search pb-6">
+  <!-- <div class="search pb-6">
     <div class="border overflow-hidden sm:rounded-md p-5">
       <div class="mb-3">
         <div class="flex justify-between flex-wrap">
@@ -42,10 +42,14 @@
         </div>
       </mat-expansion-panel>
     </div>
-</div>
-
+</div> -->
   <div class="table-inside">
     <div class="flex flex-col border ltLg:responsive">
+      <div class="flex items-center p-4 border-b">
+        <div class="w-12/12 text-left">
+          <b>Nombre Total : <span bg-warn>{{count}}</span></b>
+        </div>
+      </div>
       <div class="flex items-center p-4 border-b">
         <div class="w-6/12 font-medium text-left">ID COMMANDE</div>
         <div class="w-2/12 font-medium text-left">Client</div>
@@ -53,9 +57,12 @@
         <div class="w-2/12 font-medium text-left">Quantite Total</div>
         <div class="w-1/12 font-medium text-center">Status</div>
       </div>
+      <app-loader [show]="isLoader" style="float: unset;"></app-loader>
       <div class="flex items-center p-4 border-b" *ngFor="let com of commande">
         <div class="w-6/12 toutplat">
-          <p>{{com._id}}</p>
+          <span *ngFor="let det of com.detail">
+            <p style="font-size: 12px;"><b>{{det.idplatlib.designation}} :</b> {{det.quantite}}</p>
+          </span>
         </div>
         <div class="w-2/12 text-left">
           <p>{{com.userlib.nom}}</p>
@@ -66,15 +73,11 @@
         <div class="w-2/12 text-left">
           {{com.quantite}} Unité
         </div>
-        <div class="w-1/12 text-center">
-          <button class="action_icon__btn" style="color: rgb(4, 20, 240);;" mat-icon-button>
+        <div class="w-1/12 text-center" style="color: green;">
+          <b>{{com.status}}</b>
+          <!-- <button class="action_icon__btn" style="color: rgb(4, 20, 240);;" mat-icon-button>
             <mat-icon>info</mat-icon>
-          </button>
-        </div>
-      </div>
-      <div class="flex items-center p-4 border-b">
-        <div class="w-12/12 text-left">
-          <b>Nombre Total : <span bg-warn>{{count}}</span></b>
+          </button> -->
         </div>
       </div>
     </div>
