--- a/src/app/shared/components/loader/loader.component.html
+++ b/src/app/shared/components/loader/loader.component.html
@@ -1,3 +1,3 @@
-<div *ngIf="show" class="loader center">
+<div *ngIf="show" class="loader">
     <mat-spinner [strokeWidth]="10"></mat-spinner>
 </div>
