--- a/src/app/shared/components/sidenav/sidenav.component.html
+++ b/src/app/shared/components/sidenav/sidenav.component.html
@@ -1,11 +1,25 @@
 <div class="sidenav flex flex-col min-h-screen p-5">
     <mat-nav-list>
-      <a mat-list-item routerLink="/accueil">Plats</a>
+      <!-- <a mat-list-item routerLink="/accueil">Plats</a>
       <a mat-list-item routerLink="/commande">Commande en cours</a>
       <a mat-list-item routerLink="/gerer">Gerer les plats</a>
       <a mat-list-item routerLink="/benefice">Voir bénefice</a>
       <a mat-list-item (click)="openDialog()">Panier</a>
       <a mat-list-item routerLink="/connecter">Se connecter</a>
-      <a mat-list-item (click)="deconnecter()">Se deconnecter</a>
+      <a mat-list-item (click)="deconnecter()">Se deconnecter</a> -->
+
+      <a mat-list-item routerLink="/accueil" >Plats</a>
+      <a mat-list-item *ngIf="userType==='Restaurant'" routerLink="/commande" >Commande en cours</a>
+      <a mat-list-item *ngIf="userType==='Responsable'" routerLink="/admin/commande" >Commande</a>
+      <a mat-list-item *ngIf="userType==='Restaurant'" routerLink="/addplat" >Gérer les plats</a>
+      <a mat-list-item *ngIf="userType==='Responsable'" routerLink="/admin/newuser" >Paramètre</a>
+      <a mat-list-item *ngIf="userType==='Restaurant'" routerLink="/resto/benefice" >Voir bénefice</a>
+      <a mat-list-item *ngIf="userType==='Responsable'" routerLink="/admin/benefice" >Voir bénefice</a>
+      <a mat-list-item *ngIf="userType==='Livreur'" routerLink="/livreur/livraison" >Livraison</a>
+      <a mat-list-item routerLink="/contact" >Contactez e-kali</a>
+      <a mat-list-item (click)="openDialog()">Panier</a>
+      <a mat-list-item *ngIf="!isLogged" [routerLink]="['/connecter']">Se connecter</a>
+      <a mat-list-item *ngIf="!isLogged" [routerLink]="['/inscrire']">S'inscrire</a>
+      <a mat-list-item *ngIf="isLogged" (click)="deconnecter()">Se deconnecter</a>
     </mat-nav-list>
 </div>
